--- a/sass/media/_tablet-big.scss
+++ b/sass/media/_tablet-big.scss
@@ -166,7 +166,7 @@
     /**** Portfolio-card ****/
     
     .portfolio-card {
-        max-width: 270px;
+        width: 270px;
         height: 224px;
     }
 
