--- a/sass/media/_tablet.scss
+++ b/sass/media/_tablet.scss
@@ -83,7 +83,7 @@
         background-color: rgba(37, 73, 116, 0.8);
 
         transform: translateX(100%);
-        transition: transform 0.3s ease-in;
+        transition: transform 0.3s;
     
 
         &.nav-mobile--active {
