--- a/sass/media/_tablet.scss
+++ b/sass/media/_tablet.scss
@@ -32,6 +32,7 @@
             height: 38px;
         }
     }
+
     
     .header-about .socials {
         column-gap: 20px;
@@ -48,7 +49,7 @@
     }
 
     /**** Mobile nav ****/
-    .nav-mobile, .header-top__social {
+    .header-top__social {
         display: none;
     }
 
@@ -57,12 +58,6 @@
 
         .socials {
             margin-bottom: 20px;
-            column-gap: 20px;
-
-            svg, object {
-                width: 38px;
-                height: 38px;
-            }
         }
 
         .link {
@@ -71,7 +66,7 @@
     }
 
     .nav-mobile {
-        z-index: 2;
+        z-index: 5;
         position: fixed;
         display: flex;
         justify-content: flex-end;
@@ -83,7 +78,7 @@
         background-color: rgba(37, 73, 116, 0.8);
 
         transform: translateX(100%);
-        transition: transform 0.3s;
+        transition: transform 0.3s ease-in;
     
 
         &.nav-mobile--active {
