--- a/sass/media/_mobile.scss
+++ b/sass/media/_mobile.scss
@@ -1,3 +1,4 @@
+/* Mobile */
 @media (max-width: 767px) {
     .title {
         font-size: 32px;
@@ -148,10 +149,6 @@
     }
 
      /***** Contacts *****/
-    h2.grad-border {
-        // background-position: center bottom 3px;
-    }
-
     .contacts__row {
         flex-direction: column-reverse;
         row-gap: 20px;
@@ -170,12 +167,6 @@
         }
     }
 
-    .socials object,
-    .socials svg {
-        height: 38px;
-        width: 38px;
-    }
-    
     .contacts__text {
         margin-left: 0;
 
