--- a/sass/media/_tablet-big.scss
+++ b/sass/media/_tablet-big.scss
@@ -195,7 +195,7 @@
 
     .portfolio-card:first-child,
     .portfolio-card:nth-child(2) {
-        max-width: 420px;
+        width: 420px;
         height: 366px;
     
         .portfolio-card__img {
