--- a/sass/blocks/_button.scss
+++ b/sass/blocks/_button.scss
@@ -22,7 +22,7 @@
         background-color: $accent-color;
     }
 
-    &--accent:hover:focus  {
+    &--accent:hover, &--accent:focus  {
         background-color: #ffeb8d;
     }
     
