--- a/sass/blocks/_socials.scss
+++ b/sass/blocks/_socials.scss
@@ -2,10 +2,13 @@
     display: flex;
     align-items: center;
     column-gap: 30px;
-    transition: filter 0.5s ease-in;
 
-    a:hover {
-        filter: contrast(200%);
+    a {
+        transition: opacity 0.2s ease-in;
+
+         &:hover, &:active, &:focus {
+            opacity: 0.75;
+        }
     }
 
 }
