--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,6 +21,7 @@
 @import "./blocks/header-about";
 @import "./blocks/portfolio-card";
 @import "./blocks/timeline-item";
+@import "./blocks/form";
 
 // Sections
 @import "./sections/header-top";
