--- a/sass/sections/_contacts.scss
+++ b/sass/sections/_contacts.scss
@@ -5,6 +5,10 @@
     overflow: hidden;
 }
 
+.contacts__column:first-child {
+    width: 538px;
+}
+
 .contacts__header {
     margin-bottom: 60px;
     text-align: center;
@@ -13,6 +17,22 @@
 .contacts__row {
     display: flex;
     justify-content: space-between;
+}
+
+.contacts__form {
+    position: relative;
+    z-index: 0;
+}
+
+
+.contacts__form::before {
+    content: url("./../img/contacts/figure.svg");
+    position: absolute;
+    top: -113px;
+    right: 0;
+    transform: translateX(40%);
+    width: 280px;
+    height: 243px;
 }
 
 .contacts__list {
@@ -36,8 +56,7 @@
 }
 
 .contacts__text {
-    width: 538px;
-    position: relative;
+    margin-bottom: 32px;
 
     font-size: 18px;
     line-height: 1.6; /* 28.8px */
@@ -45,14 +64,4 @@
     p + p {
         margin-top: 8px;
     }
-}
-
-.contacts__text::before {
-    content: url("./../img/contacts/figure.svg");
-    position: absolute;
-    top: -113px;
-    right: 0;
-    transform: translateX(40%);
-    width: 280px;
-    height: 243px;
 }
