--- a/css/main.css
+++ b/css/main.css
@@ -623,6 +623,49 @@ h2.grad-border {
   background: #fff;
 }
 
+.form-input {
+  margin-bottom: 30px;
+  border-bottom: 2px solid #e5e5e5;
+}
+.form-input:not(:last-child) {
+  margin-bottom: 42px;
+}
+
+.form-input__span {
+  font-size: 22px;
+  line-height: 1;
+  color: #9d9d9d;
+}
+
+.form__button {
+  margin-top: auto;
+}
+
+.form-input {
+  position: relative;
+  height: 39px;
+}
+
+.form-input:last-child {
+  height: 100%;
+}
+
+.form-input__span {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+.form-input__input {
+  position: absolute;
+  content: "";
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+
 .header-top {
   padding-top: 63px;
   padding-bottom: 62px;
