--- a/sass/blocks/_form.scss
+++ b/sass/blocks/_form.scss
@@ -1,6 +1,6 @@
 .form {
     padding: 50px 62px;
-    
+
     position: relative;
     z-index: 1;
     width: 540px;
@@ -9,3 +9,26 @@
     box-shadow: 0 20px 100px -10px rgba(160, 206, 237, 0.75);
     background: #fff;
 }
+
+.form-input {
+    margin-bottom: 30px;
+    border-bottom: 2px solid #e5e5e5;
+
+    &:not(:last-child) {
+        margin-bottom: 42px;
+    }
+}
+
+.form-input__span {
+    font-size: 22px;
+    line-height: 1;
+    color: #9d9d9d;
+}
+
+.form-input__input {
+}
+
+.form__button {
+    margin-top: auto;
+}
+
