--- a/sass/main.scss
+++ b/sass/main.scss
@@ -22,6 +22,7 @@
 @import "./blocks/portfolio-card";
 @import "./blocks/timeline-item";
 @import "./blocks/form";
+@import "./blocks/input";
 
 // Sections
 @import "./sections/header-top";
