HTML .form teg name correction

--- a/css/main.css
+++ b/css/main.css
@@ -613,7 +613,7 @@ h2.grad-border {
   transform: translateX(-50%);
 }
 
-.form {
+.contact-form {
   padding: 50px 62px;
   position: relative;
   z-index: 1;
