--- a/sass/blocks/_form.scss
+++ b/sass/blocks/_form.scss
@@ -1,4 +1,4 @@
-.form {
+.contact-form {
     padding: 50px 62px;
 
     position: relative;
@@ -8,6 +8,18 @@
 
     box-shadow: 0 20px 100px -10px rgba(160, 206, 237, 0.75);
     background: #fff;
+}
+
+.form-item {
+}
+
+.form-item__fake-placeholder {
+}
+
+.form-item__formfield {
+}
+
+.form__button {
 }
 
 .form-input {
