--- a/sass/blocks/_form.scss
+++ b/sass/blocks/_form.scss
@@ -15,6 +15,10 @@
     & + & {
         margin-top: 42px;
     }
+
+    textarea {
+        height: 162px;
+    }
 }
 
 .fake-placeholder {
@@ -26,9 +30,15 @@
     font-size: 22px;
     line-height: 1;
     color: #9d9d9d;
+
+    pointer-events: none;
+
 }
 
 .form-input {
+    height: 39px;
+    width: 100%;
+    border-bottom: 2px solid #e5e5e5;
 }
 
 .form__button {
