--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -58,7 +58,7 @@ img, svg {
 
 input, textarea, button, select {
 	font-family: inherit;
-    font-size: inherit;
+    // font-size: inherit;
 }
 
 input::-ms-clear {
