--- a/sass/blocks/_form.scss
+++ b/sass/blocks/_form.scss
@@ -31,6 +31,7 @@
     line-height: 1;
     color: #9d9d9d;
 
+    transition: all 0.2s ease-in;
     pointer-events: none;
 
 }
@@ -39,6 +40,30 @@
     height: 39px;
     width: 100%;
     border-bottom: 2px solid #e5e5e5;
+
+    &:active, &:focus, &:valid {
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 1;
+        color: #000;
+
+        & ~ .fake-placeholder {
+            font-weight: 700;
+            font-size: 16px;
+            line-height: 1;
+            color: #eca73f;
+            
+            transform: translateY(-100%);
+        }
+    }
+
+    &:active, &:focus {
+        border-bottom-color: #ff543e;
+    }
+
+    &:valid {
+        border-bottom-color: #e5e5e5;
+    }
 }
 
 .form__button {
