CSS .contat-form @media style correction

--- a/sass/blocks/_form.scss
+++ b/sass/blocks/_form.scss
@@ -1,13 +1,26 @@
 .contact-form {
+    position: relative;
     padding: 50px 62px;
 
-    z-index: 1;
     width: 540px;
     height: 449px;
 
     box-shadow: 0 20px 100px -10px rgba(160, 206, 237, 0.75);
     background: #fff;
 }
+
+
+.contact-form::before {
+    z-index: -1;
+    content: url("./../img/contacts/figure.svg");
+    position: absolute;
+    top: -113px;
+    right: 0;
+    transform: translateX(40%);
+    width: 280px;
+    height: 243px;
+}
+
 
 .form-item {
     position: relative;
@@ -52,7 +65,7 @@
             font-size: 16px;
             line-height: 1;
             color: #eca73f;
-            
+
             transform: translateY(-100%);
         }
     }
