--- a/css/main.css
+++ b/css/main.css
@@ -65,8 +65,6 @@ input::-ms-clear {
 button, input[type=submit] {
   display: inline-block;
   box-shadow: none;
-  background-color: transparent;
-  background: none;
   cursor: pointer;
 }
 
@@ -78,14 +76,6 @@ button:focus, button:active {
 button::-moz-focus-inner {
   padding: 0;
   border: 0;
-}
-
-label {
-  cursor: pointer;
-}
-
-legend {
-  display: block;
 }
 
 html {
@@ -618,12 +608,23 @@ h2.grad-border {
 }
 
 .contact-form {
+  position: relative;
   padding: 50px 62px;
-  z-index: 1;
   width: 540px;
   height: 449px;
   box-shadow: 0 20px 100px -10px rgba(160, 206, 237, 0.75);
   background: #fff;
+}
+
+.contact-form::before {
+  z-index: -1;
+  content: url("./../img/contacts/figure.svg");
+  position: absolute;
+  top: -113px;
+  right: 0;
+  transform: translateX(40%);
+  width: 280px;
+  height: 243px;
 }
 
 .form-item {
@@ -741,19 +742,9 @@ h2.grad-border {
   justify-content: space-between;
 }
 
-.contacts__form {
+.contacts__column {
   position: relative;
   z-index: 0;
-}
-
-.contacts__form::before {
-  content: url("./../img/contacts/figure.svg");
-  position: absolute;
-  top: -113px;
-  right: 0;
-  transform: translateX(40%);
-  width: 280px;
-  height: 243px;
 }
 
 .contacts__list {
@@ -1038,9 +1029,12 @@ h2.grad-border {
   .contacts__text p + p {
     margin-top: 5px;
   }
-  .contacts__text::before {
+  .contact-form::before {
     top: -95px;
-    transform: unset;
+  }
+  .contact-form {
+    padding: 40px 50px;
+    width: 400px;
   }
   /***** Footer *****/
   .footer {
@@ -1297,9 +1291,6 @@ h2.grad-border {
   .contacts__header {
     margin-bottom: 20px;
   }
-  .contacts__row {
-    justify-content: flex-start;
-  }
   .contacts__list {
     margin-bottom: 28px;
   }
@@ -1316,14 +1307,16 @@ h2.grad-border {
     font-size: 16px;
   }
   .contacts__text {
-    margin-left: 114px;
     width: 290px;
     font-size: 14px;
   }
   .contacts__text p + p {
     margin-top: 5px;
   }
-  .contacts__text::before {
+  .contact-form {
+    padding: 35px 40px;
+  }
+  .contact-form::before {
     display: none;
   }
   /***** Footer *****/
@@ -1464,7 +1457,7 @@ h2.grad-border {
   }
   /***** Contacts *****/
   .contacts__row {
-    flex-direction: column-reverse;
+    flex-direction: column;
     row-gap: 20px;
   }
   .contacts__list li + li {
@@ -1474,6 +1467,13 @@ h2.grad-border {
     display: block;
     width: unset;
     font-size: 16px;
+  }
+  .contact-form {
+    padding: 44px 15px 40px;
+    width: 100%;
+  }
+  .contact-form .button {
+    width: 100%;
   }
   .contacts__text {
     margin-left: 0;
