--- a/sass/media/_mobile.scss
+++ b/sass/media/_mobile.scss
@@ -158,7 +158,7 @@
 
      /***** Contacts *****/
     .contacts__row {
-        flex-direction: column-reverse;
+        flex-direction: column;
         row-gap: 20px;
     }
     
@@ -172,6 +172,15 @@
             display: block;
             width: unset;
             font-size: 16px;
+        }
+    }
+
+    .contact-form {
+        padding: 44px 15px 40px;
+        width: 100%;
+
+        .button {
+            width: 100%;
         }
     }
 
