--- a/sass/media/_tablet.scss
+++ b/sass/media/_tablet.scss
@@ -302,11 +302,6 @@
         margin-bottom: 20px;
     }
 
-    .contacts__row {
-        justify-content: flex-start;
-    }
-
-
     .contacts__list {
         margin-bottom: 28px;
     
@@ -327,7 +322,6 @@
     }
    
     .contacts__text {
-        margin-left: 114px;
         width: 290px;
     
         font-size: 14px;
@@ -336,8 +330,12 @@
             margin-top: 5px;
         }
     }
-    
-    .contacts__text::before {
+
+    .contact-form {
+        padding: 35px 40px;
+    }
+
+    .contact-form::before {
         display: none;
     }
 
