--- a/sass/sections/_contacts.scss
+++ b/sass/sections/_contacts.scss
@@ -15,20 +15,9 @@
     justify-content: space-between;
 }
 
-.contacts__form {
+.contacts__column {
     position: relative;
     z-index: 0;
-}
-
-
-.contacts__form::before {
-    content: url("./../img/contacts/figure.svg");
-    position: absolute;
-    top: -113px;
-    right: 0;
-    transform: translateX(40%);
-    width: 280px;
-    height: 243px;
 }
 
 .contacts__list {
