--- a/css/main.css
+++ b/css/main.css
@@ -1458,7 +1458,10 @@ h2.grad-border {
   /***** Contacts *****/
   .contacts__row {
     flex-direction: column;
-    row-gap: 20px;
+    row-gap: 49px;
+  }
+  .contacts__list {
+    margin-bottom: 25px;
   }
   .contacts__list li + li {
     margin-top: 10px;
@@ -1475,8 +1478,16 @@ h2.grad-border {
   .contact-form .button {
     width: 100%;
   }
+  textarea.form-input:valid {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.3;
+  }
+  .fake-placeholder {
+    font-size: 18px;
+  }
   .contacts__text {
-    margin-left: 0;
+    margin-bottom: 20px;
   }
   .contacts__text p + p {
     margin-top: 5px;
