--- a/sass/media/_mobile.scss
+++ b/sass/media/_mobile.scss
@@ -159,10 +159,11 @@
      /***** Contacts *****/
     .contacts__row {
         flex-direction: column;
-        row-gap: 20px;
+        row-gap: 49px;
     }
     
     .contacts__list {
+        margin-bottom: 25px;
     
         li + li {
             margin-top: 10px;
@@ -184,9 +185,18 @@
         }
     }
 
-    .contacts__text {
-        margin-left: 0;
+    textarea.form-input:valid {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.3;
+    }
 
+    .fake-placeholder {
+        font-size: 18px;
+    }
+
+    .contacts__text {
+        margin-bottom: 20px;
         p + p {
             margin-top: 5px;
         }
