--- a/sass/blocks/_portfolio-card.scss
+++ b/sass/blocks/_portfolio-card.scss
@@ -6,15 +6,44 @@
     transition: filter 0.2s ease-in;
 
     &:hover {
-        filter: contrast(1.1) saturate(1.2);
+        .portfolio-card__img::before {
+            position: absolute;
+            content: "";
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
 
-        img {
-            overflow: hidden;
-            transform: scale(1.2);
+            background-color: rgba(255, 221, 85, 0.75);
+        }
+
+        .portfolio-card__img span {
+            display: block;
+
+            &::after {
+                z-index: -1;
+                position: absolute;
+                content: "";
+                left: 50%;
+                top: -50%;
+                transform: translateX(-50%);
+
+                width: 208px;
+                height: 51px;
+                border-radius: 80px;
+                background-color: #ef6857;
+            }
+
+        }
+
+        .portfolio-card__title {
+            line-height: 1.3;
+            color: #ff543e;
         }
     }
 
-    &:first-child, &:nth-child(2) {
+    &:first-child,
+    &:nth-child(2) {
         max-width: 540px;
         height: 463px;
 
@@ -47,6 +76,7 @@
 .portfolio-card__img {
     margin-bottom: 16px;
     overflow: hidden;
+    position: relative;
 
     img {
         width: 350px;
@@ -56,13 +86,32 @@
 
         object-fit: cover;
     }
+
+    span {
+        display: none;
+    }
+}
+
+.portfolio-card__img span {
+    z-index: 1;
+    position: absolute;
+    content: "";
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.3;
+    color: #fff;
 }
 
 .portfolio-card__text {
     height: 60px;
     overflow: hidden;
 
-    h3, p {
+    h3,
+    p {
         display: -webkit-box;
         -webkit-box-orient: vertical;
         -webkit-line-clamp: 1;
@@ -74,6 +123,9 @@
     margin-bottom: 7px;
     font-size: 24px;
     font-weight: 600;
+
+    transition: color 0.2s ease-in;
+
 }
 
 .portfolio-card__desc {
