--- a/css/main.css
+++ b/css/main.css
@@ -455,35 +455,6 @@ h2.grad-border {
   max-width: 350px;
   height: 296px;
   color: #000;
-  transition: filter 0.2s ease-in;
-}
-.portfolio-card:hover .portfolio-card__img::before {
-  position: absolute;
-  content: "";
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(255, 221, 85, 0.75);
-}
-.portfolio-card:hover .portfolio-card__img span {
-  display: block;
-}
-.portfolio-card:hover .portfolio-card__img span::after {
-  z-index: -1;
-  position: absolute;
-  content: "";
-  left: 50%;
-  top: -50%;
-  transform: translateX(-50%);
-  width: 208px;
-  height: 51px;
-  border-radius: 80px;
-  background-color: #ef6857;
-}
-.portfolio-card:hover .portfolio-card__title {
-  line-height: 1.3;
-  color: #ff543e;
 }
 .portfolio-card:first-child, .portfolio-card:nth-child(2) {
   max-width: 540px;
@@ -507,10 +478,33 @@ h2.grad-border {
   font-size: 20px;
 }
 
+.portfolio-card:hover .portfolio-card__img::before {
+  transform: translateY(0);
+}
+.portfolio-card:hover .portfolio-card__title {
+  color: #ff543e;
+}
+.portfolio-card:hover .portfolio-card__img span {
+  z-index: 3;
+  opacity: 1;
+}
+
 .portfolio-card__img {
   margin-bottom: 16px;
-  overflow: hidden;
   position: relative;
+  overflow: hidden;
+}
+.portfolio-card__img::before {
+  position: absolute;
+  z-index: 2;
+  content: "";
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  transition: transform 0.2s ease-in;
+  background-color: rgba(255, 221, 85, 0.75);
 }
 .portfolio-card__img img {
   width: 350px;
@@ -520,21 +514,22 @@ h2.grad-border {
   -o-object-fit: cover;
      object-fit: cover;
 }
-.portfolio-card__img span {
-  display: none;
-}
 
 .portfolio-card__img span {
-  z-index: 1;
   position: absolute;
-  content: "";
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  transition: all 0.2s ease-in;
+  display: inline-block;
+  padding: 14px 20px;
+  border-radius: 80px;
+  background-color: #ef6857;
   font-weight: 700;
   font-size: 18px;
   line-height: 1.3;
   color: #fff;
+  opacity: 0;
 }
 
 .portfolio-card__text {
