--- a/sass/blocks/_portfolio-card.scss
+++ b/sass/blocks/_portfolio-card.scss
@@ -3,44 +3,6 @@
     max-width: 350px;
     height: 296px;
     color: $black-color;
-    transition: filter 0.2s ease-in;
-
-    &:hover {
-        .portfolio-card__img::before {
-            position: absolute;
-            content: "";
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-
-            background-color: rgba(255, 221, 85, 0.75);
-        }
-
-        .portfolio-card__img span {
-            display: block;
-
-            &::after {
-                z-index: -1;
-                position: absolute;
-                content: "";
-                left: 50%;
-                top: -50%;
-                transform: translateX(-50%);
-
-                width: 208px;
-                height: 51px;
-                border-radius: 80px;
-                background-color: #ef6857;
-            }
-
-        }
-
-        .portfolio-card__title {
-            line-height: 1.3;
-            color: #ff543e;
-        }
-    }
 
     &:first-child,
     &:nth-child(2) {
@@ -73,10 +35,41 @@
 
 }
 
+.portfolio-card:hover {
+
+    .portfolio-card__img::before {
+        transform: translateY(0);
+    }
+
+    .portfolio-card__title {
+        color: #ff543e;
+    }
+
+    .portfolio-card__img span {
+        z-index: 3;
+        opacity: 1;
+    }
+}
+
 .portfolio-card__img {
     margin-bottom: 16px;
-    overflow: hidden;
+
     position: relative;
+    overflow: hidden;
+
+    &::before {
+        position: absolute;
+        z-index: 2;
+        content: "";
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        transform: translateY(100%);
+        transition: transform 0.2s ease-in;
+
+        background-color: rgba(255, 221, 85, 0.75);
+    }
 
     img {
         width: 350px;
@@ -86,24 +79,25 @@
 
         object-fit: cover;
     }
-
-    span {
-        display: none;
-    }
 }
 
 .portfolio-card__img span {
-    z-index: 1;
     position: absolute;
-    content: "";
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    transition: all 0.2s ease-in;
+
+    display: inline-block;
+    padding: 14px 20px;
+    border-radius: 80px;
+    background-color: #ef6857;
 
     font-weight: 700;
     font-size: 18px;
     line-height: 1.3;
     color: #fff;
+    opacity: 0;
 }
 
 .portfolio-card__text {
