CSS .portfolio-card :hover correction

--- a/sass/media/_tablet-big.scss
+++ b/sass/media/_tablet-big.scss
@@ -201,6 +201,10 @@
         .portfolio-card__img {
             margin-bottom: 20px;
         }
+
+        .portfolio-card__img span {
+            font-size: 18px;
+        }
     
         img {
             width: 420px;
