--- a/css/main.css
+++ b/css/main.css
@@ -463,6 +463,9 @@ h2.grad-border {
 .portfolio-card:first-child .portfolio-card__img, .portfolio-card:nth-child(2) .portfolio-card__img {
   margin-bottom: 20px;
 }
+.portfolio-card:first-child .portfolio-card__img span, .portfolio-card:nth-child(2) .portfolio-card__img span {
+  font-size: 24px;
+}
 .portfolio-card:first-child img, .portfolio-card:nth-child(2) img {
   width: 540px;
   height: 370px;
@@ -502,7 +505,7 @@ h2.grad-border {
   left: 0;
   right: 0;
   bottom: 0;
-  transform: translateY(100%);
+  transform: translateY(-100%);
   transition: transform 0.2s ease-in;
   background-color: rgba(255, 221, 85, 0.75);
 }
@@ -523,8 +526,10 @@ h2.grad-border {
   transition: all 0.2s ease-in;
   display: inline-block;
   padding: 14px 20px;
+  min-width: 208px;
   border-radius: 80px;
   background-color: #ef6857;
+  text-align: center;
   font-weight: 700;
   font-size: 18px;
   line-height: 1.3;
@@ -992,6 +997,10 @@ h2.grad-border {
   .portfolio-card:first-child .portfolio-card__img,
   .portfolio-card:nth-child(2) .portfolio-card__img {
     margin-bottom: 20px;
+  }
+  .portfolio-card:first-child .portfolio-card__img span,
+  .portfolio-card:nth-child(2) .portfolio-card__img span {
+    font-size: 18px;
   }
   .portfolio-card:first-child img,
   .portfolio-card:nth-child(2) img {
