--- a/sass/blocks/_portfolio-card.scss
+++ b/sass/blocks/_portfolio-card.scss
@@ -13,6 +13,10 @@
             margin-bottom: 20px;
         }
 
+        .portfolio-card__img span {
+            font-size: 24px;
+        }
+
         img {
             width: 540px;
             height: 370px;
@@ -65,7 +69,7 @@
         left: 0;
         right: 0;
         bottom: 0;
-        transform: translateY(100%);
+        transform: translateY(-100%);
         transition: transform 0.2s ease-in;
 
         background-color: rgba(255, 221, 85, 0.75);
@@ -90,9 +94,11 @@
 
     display: inline-block;
     padding: 14px 20px;
+    min-width: 208px;
     border-radius: 80px;
     background-color: #ef6857;
 
+    text-align: center;
     font-weight: 700;
     font-size: 18px;
     line-height: 1.3;
