--- a/sass/sections/_contacts.scss
+++ b/sass/sections/_contacts.scss
@@ -15,16 +15,11 @@
     justify-content: space-between;
 }
 
-.contacts__column {
-    position: relative;
-    z-index: 0;
-}
-
 .contacts__list {
     margin-bottom: 34px;
     line-height: 1.6;
 
-    li + li {
+    li+li {
         margin-top: 22px;
     }
 
@@ -45,9 +40,10 @@
     width: 538px;
 
     font-size: 18px;
-    line-height: 1.6; /* 28.8px */
+    line-height: 1.6;
+    /* 28.8px */
 
-    p + p {
+    p+p {
         margin-top: 8px;
     }
 }
