--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -20,8 +20,8 @@ body {
     align-items: center;
     justify-content: center;
 
-    bottom: 5%;
-    right: 10%;
+    bottom: 15px;
+    right: 10px;
     width: 45px;
     height: 45px;
     border-radius: 50%;
