--- a/sass/sections/_contacts.scss
+++ b/sass/sections/_contacts.scss
@@ -1,4 +1,6 @@
 .contacts {
+    position: relative;
+    z-index: 1;
     padding-top: 70px;
     padding-bottom: 90px;
     background: linear-gradient(0deg, #f5fbff 0%, #f5fbff 100%), #f4f8f9;
