--- a/sass/blocks/_form.scss
+++ b/sass/blocks/_form.scss
@@ -9,10 +9,11 @@
 
 
 .contact-form::after {
-    content: url("./../img/contacts/figure.svg");
+    z-index: -1;
     position: absolute;
     top: -113px;
     right: 0;
+    content: url("./../img/contacts/figure.svg");
     transform: translateX(40%);
     width: 280px;
     height: 243px;
